2010-03-04  Pablo de la Concepción <pablo.concepcion@artica.es>

	* images/gis_map/icons/circle.bad.png ,
	images/gis_map/icons/circle.default.png ,
	images/gis_map/icons/circle.ok.png ,
	images/gis_map/icons/circle.warning.png ,
	images/gis_map/icons/cross.bad.png ,
	images/gis_map/icons/cross.default.png ,
	images/gis_map/icons/cross.ok.png ,
	images/gis_map/icons/cross.warning.png ,
	images/gis_map/icons/marker.bad.png ,
	images/gis_map/icons/marker.default.png ,
	images/gis_map/icons/marker.ok.png ,
	images/gis_map/icons/marker.warning.png ,
	images/gis_map/icons/square_marker.bad.png ,
	images/gis_map/icons/square_marker.default.png ,
	images/gis_map/icons/square_marker.ok.png ,
	images/gis_map/icons/square_marker.warning.png ,
	images/gis_map/icons/star.bad.png ,
	images/gis_map/icons/star.default.png ,
	images/gis_map/icons/star.ok.png ,
	images/gis_map/icons/star.warning.png ,
	images/gis_map/icons/triangle.bad.png ,
	images/gis_map/icons/triangle.default.png ,
	images/gis_map/icons/triangle.ok.png ,
	images/gis_map/icons/triangle.warning.png: New icons for the agents 

2010-03-04  Pablo de la Concepción <pablo.concepcion@artica.es>

	*  include/functions_gis.php: added missing num_zoom_levels value to 
	the baselayers hash when printing the Agent Map

2010-03-03  Raúl Mateos <raulofpandora@gmail.com>

	* operation/incidents/*.php: Updated year and headers.

2010-03-03  Sancho Lerena <slerena@artica.es>
	
	* (A lot of files): Updated include("config.php") and replaced by
	global $config.

	* functions_db.php, functions_html.php: Fixed way to get data from the hash
	instead from the array. 

2010-03-03  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: add in the last time a function "printMap2"
	that it is a clean function. Change the function "printMap" to call
	"printMap2".
	
	* include/javascript/openlayers.pandora.js: in function "js_printMap" set
	the spherical Mercator for google maps. 
	